--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
   </head>
   <body>
 
+    <div class="selettore_tipi">
+      <label for="type">Filtra per tipologia</label>
+      <select id="type" name="type">
+        <option value="">all</option>
+
+      </select>
+    </div>
+
     <div class="container">
 
 
-      
+
 
 
     </div>
